@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-12T16:10:50Z",
-  "count" : 1,
-  "count_minmax" : [ 0, 1 ],
+  "timestamp" : "2022-05-13T00:46:01Z",
+  "count" : 4,
+  "count_minmax" : [ 0, 4 ],
   "count_prev_day_inc" : 81,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
