@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-12T16:10:50Z",
+  "timestamp" : "2022-05-13T00:46:01Z",
   "count_outdated" : 1050,
   "uniques_outdated" : 67,
-  "count" : 1520,
+  "count" : 1523,
   "uniques" : 80,
   "views" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 4,
+      "count_minmax": [ 0, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
