@@ -1,3 +1,9 @@
+2022-05-13T00:46:01Z:
+* notice: last 14d: all unq: 473 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 1050 67 / 1520 80
+* notice: next accum: outdated-all outdated-unq / all unq: 1050 67 / 1523 80
+* notice: prev json diff / prev day diff: unq all: +0 +3 -0 -0 / +0 +3 -0 -0
+
 2022-05-12T16:10:50Z:
 * notice: last 14d: all unq: 470 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 1050 67 / 1519 79
